apps/notes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes
spec:
  selector:
    app.kubernetes.io/name: notes
  ports:
    - name: http
      port: 80
      targetPort: http
